# bondwb

./: .devcontainer.json  .gitignore  Debugging Goldbeter Koshland.ipynb  Dockerfile  DockerfileDev  README.md  biowb.hs  build  contributors.txt  cpi-ide.glade  cpiide.hs  cpilib.cabal  cpiwb.cabal  cpiwb.hs  install-bins.sh  install-deps-fedora.sh  install-deps-ubuntu.sh  package.yaml  requirements.txt  script.py  stack-minimal.yaml  stack.yaml  wang42.biocpi  wang43.biocpi
CPi/: Matlab.hs  Plot.hs
Tests/CPi/: ASTSpec.hs  ODEExtractionSpec.hs  ParserNewSpec.hs  ProcessesSpec.hs  StochPyExtractionSpec.hs  SymbolicSpec.hs  TransitionsSpec.hs  VectorSpec.hs
bench/: Benchmark.hs
bondlib/: bondlib.cabal  package.yaml
bondlib/BondCalculus/: AST.hs  Base.hs  Examples.hs  NumericalMethods.hs  ODEExtraction.hs  Parser.hs  ParserNew.hs  Plot.hs  Processes.hs  Simulation.hs  StochPyExtraction.hs  Symbolic.hs  Transitions.hs  Vector.hs
bondlib/test/BondCalculus/: ASTSpec.hs  BaseSpec.hs  ODEExtractionSpec.hs  ParserNewSpec.hs  ParserSpec.hs  ProcessesSpec.hs  StochPyExtractionSpec.hs  SymbolicSpec.hs  TransitionsSpec.hs  VectorSpec.hs
bondplot/: package.yaml
bondwb/: biowb.hs  bondwb.hs  package.yaml
bondwb-minimal/: bondwb.hs  package.yaml
bondwb/BondCalculus/: ArgListParser.hs
cpi_extension/: cpi_extension.c  cpi_extension.mexa64  odeConstruction.c  ode_construction.c
cpilib/: cpilib.cabal  package.yaml
cpilib/CPi/: Lib.hs  Logic.hs  Matlab.hs  ODE.hs  Parser.hs  Plot.hs  Semantics.hs  Signals.hs  Tests.hs
cpiwb/: cpiwb.cabal  cpiwb.hs  package.yaml
models/: CH2.biocpi  LocationServer.cpi  Phosphorylation.cpi  Phosphorylation.m  Phosphorylation2.cpi  Phosphorylation3.cpi  Polyethylene.cpi  PolyethyleneFinite.cpi  PolyethyleneFinite2.m  PolyethyleneFiniteAttempt2.cpi  RNAInteractions.cpi  RNATranslationTest.m  Ribosome.cpi  Ribosome2.cpi  Ribosome3.cpi  Ribosome4.cpi  Ribosome5.cpi  birthdeath.biocpi  colonies.biocpi  colouredRabbits.biocpi  colouredRabbits2.biocpi  colouredRabbits3.biocpi  cosmic.biocpi  cusfilm.biocpi  enzyme-context.biocpi  enzyme.biocpi  enzyme.cpi  enzymeI.biocpi  enzymemm.biocpi  fieldnoyes.biocpi  flame.biocpi  geneticXOR.biocpi  massConservation.cpi  mut_act_gk_bug.bond  mutations.biocpi  persistantBacteria.biocpi  pingpong.biocpi  pingpongkineticlaw.biocpi  plantclock.biocpi  plantclocktl.model  (+31 more)
ode_families/: abcd_odes.mat  rrhodes_test.mat  thrombin_activation_minimal.mat  thrombin_activation_reduced.mat
plotlib/: package.yaml  plotlib.cabal
plotlib/BioCalcLib/: Plot.hs
sharedlib/: package.yaml  sharedlib.cabal
sharedlib/BioCalcLib/: Lib.hs
src/CPi/: AST.hs  Base.hs  Examples.hs  Lib.hs  Logic.hs  Matlab.hs  MiniSemantics.hs  MyGTKRender.hs.old  NumericalMethods.hs  ODE.hs  ODEExtraction.hs  Parser.hs  ParserNew.hs  Plot.hs  Processes.hs  Semantics.hs  Signals.hs  Simulation.hs  StochPyExtraction.hs  Symbolic.hs  Tests.hs  Transitions.hs  Vector.hs
